<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_item_zikr_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="16dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_zikr_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/amiri"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="@string/aya_demo" />
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/linear_zikr_count"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/card_item_zikr_container"
        app:layout_constraintLeft_toLeftOf="@id/card_item_zikr_container"
        app:layout_constraintRight_toRightOf="@id/card_item_zikr_container"
        app:layout_constraintTop_toBottomOf="@id/card_item_zikr_container">

        <Button
            android:id="@+id/share"
            style="?android:attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/zikr_button_back_left"
            android:drawableStart="@drawable/ic_share"
            android:paddingStart="10dp"
            android:text="@string/share"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/container_increment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/zikr_button_back_right">

            <TextView
                android:id="@+id/item_zikr_count"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:background="@drawable/count_button_background"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="500"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/count"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"

                />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

